@@ -1,4 +1,6 @@
 # Nmap Changelog ($Id$); -*-text-*-
+o [NSE] Added ospf library which handles OSPFv2 packets.
+  [Patrik Karlsson]
 
 o [NSE] Fixed a false positive in http-vuln-cve2011-3192.nse, which detected
   Apache 2.2.22 as vulnerable. [Michael Meyer]
